@@ -1,30 +1,49 @@
-# WTSightEdit
-![GitHub All Releases](https://img.shields.io/github/downloads/SMILEY4/WTSightEdit/total)
-
-A WYSIWYG-Editor for custom sights for the game "War Thunder" 
-
-⚠️ *Note: This project is no longer actively developed.*
-
-
-## How to run
-
-This application was written with Java 8 and requires JavaFX. JavaFX is no longer provided with versions 9 or higher or with the OpenJDK. 
-
-**Workaround - Adding JavaFX manually when running**
-
-1. Download JavaFX: https://gluonhq.com/products/javafx/
-
-2. Run the following command, replace "YOUR_PATH_TO_JAVAFX" and "YOUR_PATH_TO_WTSIGHTEDIT" with the correct paths (This command should work with any Java version)
-
-   ```
-   java --module-path YOUR_PATH_TO_JAVAFX/lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.swt -jar YOUR_PATH_TO_WTSIGHTEDIT/data/wtedit_application.jar
-   ```
-   
-   Replace "pathToJavaFx" with the path to the downloaded and extracted javafx-directory and "pathToWTSightEdit" with the path to the directory with of the "./WTSightEdit.jar".
-   
-
 
 
 
 ![alt text](https://i.imgur.com/rnyTPeB.png)
 https://www.youtube.com/watch?v=bRAGADRql1g
+?xml version="1.0" encoding="UTF-8"?>
+<module type="JAVA_MODULE" version="4">
+  <component name="EclipseModuleManager">
+    <libelement value="jar://$MODULE_DIR$/libs/commons-math3-3.6.1.jar!/" />
+    <libelement value="jar://$MODULE_DIR$/libs/gson-2.8.5.jar!/" />
+    <src_description expected_position="1">
+      <src_folder value="file://$MODULE_DIR$/src" expected_position="1" />
+      <src_folder value="file://$MODULE_DIR$/res" expected_position="2" />
+    </src_description>
+  </component>
+  <component name="NewModuleRootManager">
+    <output url="file://$MODULE_DIR$/bin" />
+    <exclude-output />
+    <content url="file://$MODULE_DIR$">
+      <sourceFolder url="file://$MODULE_DIR$/src" isTestSource="false" />
+      <sourceFolder url="file://$MODULE_DIR$/res" isTestSource="false" />
+      <excludeFolder url="file://$MODULE_DIR$/out" />
+    </content>
+    <orderEntry type="jdk" jdkName="1.8" jdkType="JavaSDK" />
+    <orderEntry type="sourceFolder" forTests="false" />
+    <orderEntry type="module" module-name="SimpleMath" />
+    <orderEntry type="module" module-name="SimpleUtils" />
+    <orderEntry type="module-library">
+      <library name="commons-math3-3.6.1.jar">
+        <CLASSES>
+          <root url="jar://$MODULE_DIR$/libs/commons-math3-3.6.1.jar!/" />
+        </CLASSES>
+        <JAVADOC />
+        <SOURCES />
+      </library>
+    </orderEntry>
+    <orderEntry type="module-library">
+      <library name="gson-2.8.5.jar">
+        <CLASSES>
+          <root url="jar://$MODULE_DIR$/libs/gson-2.8.5.jar!/" />
+        </CLASSES>
+        <JAVADOC>
+          <root url="jar://$MODULE_DIR$/libs/gson-2.8.5-javadoc.jar!/" />
+        </JAVADOC>
+        <SOURCES />
+      </library>
+    </orderEntry>
+  </component>
+</module>
